<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/items_margin"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/markerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/marker_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingBottom="8dp" />

    <ImageView
        android:id="@+id/markerImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/marker_image_description"
        android:scaleType="centerCrop" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">
        <TextView
            android:id="@+id/markerDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/marker_description_text" />
    </ScrollView>

    <Button
        android:id="@+id/closeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_close_text" />
</LinearLayout>
