<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.yandex.mapkit.mapview.MapView
        android:id="@+id/mapview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/current_location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text"
        android:layout_margin="@dimen/items_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageView
        android:id="@+id/zoom_in"
        android:src="@drawable/ic_zoom_in"
        android:layout_width="@dimen/zoom_size"
        android:layout_height="@dimen/zoom_size"
        android:contentDescription="@string/zoom_in_description"
        android:layout_margin="@dimen/items_margin"
        app:layout_constraintBottom_toTopOf="@+id/zoom_out"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/zoom_out"
        android:src="@drawable/ic_zoom_out"
        android:layout_width="@dimen/zoom_size"
        android:layout_height="@dimen/zoom_size"
        android:layout_margin="@dimen/items_margin"
        android:contentDescription="@string/zoom_out_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
